--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,23 +86,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 /* change this to one class and 1 */
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.service-content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -111,12 +111,12 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+.service-content img {
     max-height: 200px;
 }
 
 
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+.service-content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
